<resources>
    <string name="app_name">House Planner</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>

    <string name="appIcon">application logo</string>
    <string name="login_lower">login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="showPassword">Show password</string>
    <string name="hidePassword">Hide password</string>
    <string name="forgotten">Forgot details?</string>
    <string name="emailValidation">Must be a valid email</string>
    <string name="passwordValidation">Password must be greater than 8 characters and contain a symbol</string>
    <string name="passWeak">Weak</string>
    <string name="passOkay">Okay</string>
    <string name="passStrong">Strong</string>
    <string name="submit">SUBMIT</string>
    <string name="retypePassword">Retype password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="nameValidation">Must be a valid name</string>
    <string name="passwordsMustMatch">Passwords must match</string>
    <string name="title_activity_main_screen">main_screen</string>
    <string name="title_houses">Houses</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_account">Account</string>
    <string name="navigationGraph">\@navigation/navigationGraph</string>
    <string name="newPhoto">New photo</string>
    <string name="logout">LOGOUT</string>
    <string name="deleteAccount">DELETE ACCOUNT</string>
    <string name="select">SELECT</string>
    <string name="deleteHouse">DELETE HOUSE</string>
    <string name="name">Name</string>
    <string name="houseHead">Head of House</string>
    <string name="members">Members</string>
    <string name="inviteMember">Invite Member</string>
    <string name="selecthouse">SELECT HOUSE</string>
    <string name="tasksremaining">Tasks Remaining</string>
    <string name="location">LOCATION</string>
    <string name="tasksTotal">Total tasks</string>
    <string name="totalTasks">Total Tasks</string>
    <string name="tasksCompleted" />
    <string name="taskCompleted">Tasks Completed</string>
    <string name="inviteMemberUpper">INVITE MEMBER</string>
    <string name="cancel">CANCEL</string>
    <string name="newHouse">NEW HOUSE</string>
    <string name="newHouse_lower">New House</string>
    <string name="houseName">House Name</string>
    <string name="addLocation">Add Location</string>
    <string name="add">ADD</string>
    <string name="finish">FINISH</string>
    <string name="mustBeValidHouseName">Must be a valid house name</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="madeBy">Made by</string>
    <string name="title_activity_maps">Map</string>


</resources>
