<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/StandardSpacingHalf">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryTinted"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <CheckBox
                android:id="@+id/completedCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/StandardSpacingHalf">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/editBtn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/taskTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_tasks"
                            android:textColor="@color/textBlack"
                            android:textSize="@dimen/text_medium"
                            tools:layout_conversion_absoluteHeight="48dp"
                            tools:layout_conversion_absoluteWidth="343dp" />

                        <EditText
                            android:id="@+id/taskTitleEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:editable="true"
                            android:ems="10"
                            android:inputType="textShortMessage"
                            android:text="@string/title_tasks"
                            android:visibility="gone"
                            tools:layout_conversion_absoluteHeight="0dp"
                            tools:layout_conversion_absoluteWidth="0dp" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/editBtn"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="@dimen/standardIcon"
                        android:layout_height="@dimen/standardIcon"
                        android:background="@drawable/ic_edit_black_24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_conversion_absoluteHeight="48dp"
                        tools:layout_conversion_absoluteWidth="48dp" />

                    <Button
                        android:id="@+id/doneBtn"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="@dimen/standardIcon"
                        android:layout_height="@dimen/standardIcon"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/ic_done_black_24dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_conversion_absoluteHeight="48dp"
                        tools:layout_conversion_absoluteWidth="48dp" />


                </android.support.constraint.ConstraintLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/time" />

                        <TextView
                            android:id="@+id/timeVal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/time"
                            android:textColor="@color/textBlack" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/date" />

                        <TextView
                            android:id="@+id/dateVal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/date"
                            android:textColor="@color/textBlack" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/madeBy" />

                        <TextView
                            android:id="@+id/madeByVal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/madeBy"
                            android:textColor="@color/textBlack" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>